<resources>
    <string name="view_contact">View Contact</string>
    <string name="sign_in_cancelled">Cancelled</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="unknown_sign_in_response">No Response</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="img_transition">img_transition</string>
    <string name="title_activity_maps">Map</string>
    <string name="typing">Typing...</string>
    <string name="recording">Recording...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_profile">Profile</string>
    <string-array name="autodownload">
        <item>Photos</item>
        <item>Audio</item>
        <item>Videos</item>
        <item>Files</item>
    </string-array>
    <string-array name="autodownload_cellular_defaults">
        <item>0</item>
    </string-array>
    <string-array name="autodownload_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="autodownload_wifi_defaults">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="pref_security_entries">
        <item>Immediately</item>
        <item>After 1 Minute</item>
        <item>After 5 Minutes</item>
        <item>After 30 Minutes</item>
    </string-array>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="key_autodownload_roaming" translatable="false">key_autodownload_roaming</string>
    <string name="key_autodownload_wifi" translatable="false">key_autodownload_wifi</string>
    <string name="key_autodownload_cellular" translatable="false">key_autodownload_cellular</string>
    <string name="pref_header_chat">Chat</string>
    <string name="pref_header_about">About</string>
    <string name="camera_tip">Tap to Take a Photo,Hold to Record Video</string>
    <string name="audio_permission_error">Audio Permissions are Missing</string>
    <string name="space_or_permissions_error_toast">Error :( ,Please check Space or Permissions</string>
    <string name="voice_message_is_short_toast">Voice Message is Too Short</string>
    <string name="file_is_too_big">file is Too BIG</string>
    <string name="type_not_supported">type not supported!</string>
    <string name="unblock_contact">Unblock Contact</string>
    <string name="block_contact">Block Contact</string>
    <string name="unmute_notifications">UnMute Notifications</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="loading">Loading..</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="copied_to_clipboard">Copied To Clipboard...</string>
    <string name="image_video_not_found">CHOSEN IMAGE/Video Not Found</string>
    <string name="sending_messages">Sending Messages...</string>
    <string name="message_is_too_long">Message is Too long please try to reduce it</string>
    <string name="error_playing_this">Error playing this :(</string>
    <string name="cannot_open_this_file">cannot open this file</string>
    <string name="checking">Checking..</string>
    <string name="does_not_have_fireapp">does not have %s</string>
    <string name="user_is_blocked">User is Blocked</string>
    <string name="unblock">UnBlock</string>
    <string name="cancel">CANCEL</string>
    <string name="not_contact_selected">No Contact Selected</string>
    <string name="missing_permissions">Missing Permissions</string>
    <string name="ok">OK</string>
    <string name="no_close_the_app">NO Close The App</string>
    <string name="you_have_to_grant_permissions">You have to grant permissions in order to use this App</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_conversation_confirmation">Are you sure you want to delete this conversation?</string>
    <string name="yes">YES</string>
    <string name="select_contact">Select Contact</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="image_changed">Image has been changed</string>
    <string name="username_is_empty">user name cannot be empty</string>
    <string name="default_status">Heeey I am using %s!</string>
    <string name="reply">Reply</string>
    <string name="choose_number">Choose a Number</string>
    <string name="delete_messages_confirmation">Delete Message?</string>
    <string name="you">You</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_status">Enter your status</string>
    <string name="status_is_empty">Status is Empty</string>
    <string name="no_media_summary">no media</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="files">Files</string>
    <string name="no">NO</string>
    <string name="file">File</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="audio">Audio</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="media">Media</string>
    <string name="count">Count</string>
    <string name="about_and_phone_number">About &amp; phone number</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="share">Share</string>
    <string name="add_to_contacts">Add to Contacts</string>
    <string name="edit">Edit</string>
    <string name="checking_contact">Checking Contact</string>
    <string name="online">Online</string>
    <string name="could_not_get_audio_file">could not get audio file</string>
    <string name="could_not_get_this_image">Could not get this image</string>
    <string name="delete_media_from_phone">Delete Media From Phone</string>
    <string name="media_player_error">file not found or permissions missing</string>
    <string name="select_numbers">Select Numbers</string>
    <string name="contact_info">Contact Info</string>
    <string name="not_found">Not found</string>
    <string name="enter_is_sent_smmary">Enter is Send</string>
    <string name="enter_is_send_title">Enter key will send your message</string>
    <string name="mobile_data_title">when using mobile data</string>
    <string name="roaming_title">when roaming</string>
    <string name="wifi_title">when using Wifi</string>
    <string name="media_auto_download_title">Media auto download</string>
    <string name="could_not_get_this_file">could not get this file</string>
    <string name="send_to_toolbar_title">Send To ..</string>
    <string name="item_deleted_from_storage">this item was deleted from your storage</string>
    <string name="app_info">%s is a Chat App that connects people with each other with a simple and great UI</string>
    <string name="feedback">Feedback</string>
    <string name="choose_email_app">Choose Email App</string>
    <string name="error">error</string>
    <string name="new_group">New Group</string>
    <string name="add_participants">Add Participants</string>
    <string name="max_number_of_users_reached">Max Number of users reached</string>
    <string name="group_title">Group Title</string>
    <string name="set_title_for_group">Set a title for Group</string>
    <string name="group_hint">Group name</string>
    <string name="exit_group">Exit group</string>
    <string name="participants">Participants</string>
    <string name="delete_member">Delete Member</string>
    <string name="delete_member_message">are you sure you want to delete this member?</string>
    <string name="removing_member">Removing member...</string>
    <string name="member_removed">Member removed</string>
    <string name="error_removing_member">error removing member</string>
    <string name="user_already_added_to_group">user already added to group</string>
    <string name="adding">Adding...</string>
    <string name="added_successfully">added successfully</string>
    <string name="group_name_changed">group name changed</string>
    <string name="exiting_group">Exiting group...</string>
    <string name="you_cant_send_messages_to_group">You cant\'t send message to this group because you are no longer a participant</string>
    <string name="no_longer_participant">You are no longer a participant in this group</string>
    <string name="delete_group">Delete group</string>
    <string name="created_this_group">created this group</string>
    <string name="removed">Removed</string>
    <string name="is_now_an_admin">is now an Admin</string>
    <string name="exit_the_group">Exit the group</string>
    <string name="added">Added</string>
    <string name="group_info">Group info</string>
    <string name="are_now_an_admin">are now an Admin</string>
    <string name="at">at</string>
    <string name="created_by">Created by</string>
    <string name="you_deleted_this_message">You deleted this message</string>
    <string name="this_message_was_deleted">This message was deleted</string>
    <string name="delete_for_me">DELETE FOR ME</string>
    <string name="delete_for_everyone">DELETE FOR EVERYONE</string>
    <string name="message_member">Message</string>
    <string name="make_group_admin">Make group admin</string>
    <string name="dismiss_admin">Dismiss admin</string>
    <string name="remove_member">Remove</string>
    <string name="only_admins_can_post">Only admins can post</string>
    <string name="are_no_longer_an_admin">are no longer an admin</string>
    <string name="is_no_longer_an_admin">is no longer an admin</string>
    <string name="you_added">You added</string>
    <string name="you_left">You Left</string>
    <string name="left_group">Left group</string>
    <string name="you_removed">You removed</string>
    <string name="you_created_this_group">You created this group</string>
    <string name="you_changed_group_preferences">You changed group preferences</string>
    <string name="changed_group_preferences">changed group preferences</string>
    <string name="this_user_has_old_version">This user has old version of this app</string>
    <string name="exit_group_confirmation_dialog">are you sure you want to exit this group?</string>
    <string name="voice_call_hint">Voice Call</string>
    <string name="video_call_hint">Video Call</string>
    <string name="invite">Invite</string>
    <string name="clear_chat">Clear chat</string>
    <string name="chat_settings">Chat settings</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="chat_backup">Chat backup</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="ignore_battery_dialog_title">Ignore Battery Optimization</string>
    <string name="ignore_battery_summary">In order to make sure that all messages delivered correctly you have to disable Battery Optimizations</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="security">Security</string>
    <string name="unlock_with_fingerprint">Unlock with Fingerprint</string>
    <string name="lock_after">Lock after</string>
    <string name="immediately">Immediately</string>
    <string name="after_1_minute">After 1 minute</string>
    <string name="after_5_minutes">After 5 minutes</string>
    <string name="after_30_minutes">After 30 minutes</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="about">About</string>
</resources>