<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_reply"
        android:icon="@drawable/a_chat_reply"
        android:title="@string/reply"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_copy"
        android:icon="@drawable/a_chat_copy"
        android:title="@string/copy"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_delete"
        android:icon="@drawable/a_chat_delete"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_share"
        android:icon="@drawable/a_chat_shar"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_forward"
        android:icon="@drawable/a_chat_forword"
        android:title="@string/forward"
        app:showAsAction="always" />


</menu>